--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 This is just some stub code I am having issues with. 
+
+The goal is the add a method to the code behind for the media.phtml block so I can use them in the template. 
+
+Thanks
+Tim
+razialx@gmail.com
+
